third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_return.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_call_lhs_return.move:3:20
  │
3 │         (return ())(0, 1);
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected ';'
